deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: formbuilder-product-page
  labels:
    app: formbuilder-product-page
spec:
  ports:
  - port: 4567
    name: http
    targetPort: 4567
  selector:
    app: formbuilder-product-page
